# thinker-rs

./: .gitignore  Cargo.toml  README.md  all_graph.json  end_graph.json  graph.json
instructions/: closeness_to_answer.json  thought.json
src/: graph.rs  inference.rs  lib.rs  main.rs  node.rs  prompt.rs
