[package]
name = "thinker-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
async-openai = "0.27.2"
log = "0.4.26"
rayon = "1.10.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
simple_logger = "5.0.0"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread"] }
