[package]
name = "thinker-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
async-openai = "0.27.2"
console = "0.15.10"
indicatif = "0.17.11"
rand = "0.9.0"
rayon = "1.10.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread"] }
